# sign_language

./: .gitignore  AppController.cpp  AppController.h  CMakeLists.txt  README.md  main.cpp
ai_server/: README.md  ai_server.py  augment.py  compare_keypoints.py  model.py  portfolio_viz.py  preprocess.py  retrain.py  train.py
ai_server/data/: syn_단어목록.csv
camera/: KeypointClient.cpp  KeypointClient.h
camera/새 폴더/: CameraWorker.cpp  CameraWorker.h
keypoint_server/: BUILD_EXE.md  BUILD_GUIDE.txt  keypoint_server.py  run_keypoint_server.bat
network/: NetworkTestWidget.h  ProtocolHandler.cpp  ProtocolHandler.h  TcpClient.cpp  TcpClient.h
ops-server/: .gitignore  config.py  db_manager_fixed.py  logger.py  model_manager.py  ops_server_fixed.py  protocol.py  requirements.txt  retrain_scheduler.py  schema.sql  session_manager_fixed.py  test.py  word_info_with_video.csv
ops-server/handlers/: auth.py  base.py  dictionary.py  game.py  health.py  learning.py  settings.py
video-server/: README.md  main.py  nginx.conf  production_server_additions.py  requirements.txt  videos_list.txt
video-server/routers/: video.py
widgets/: AppStyle.h  DictWidget.cpp  DictWidget.h  DictWidget.ui  LoginWidget - 복사본.ui  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  RegisterWidget.cpp  RegisterWidget.h  RegisterWidget.ui  ReviewWidget.cpp  ReviewWidget.h  SettingsWidget.cpp  SettingsWidget.h  SettingsWidget.ui  StudyWidget.cpp  StudyWidget.h  StudyWidget.ui  TestWidget.cpp  TestWidget.h  TestWidget.ui  VideoPlayer.cpp  VideoPlayer.h
